--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
     "chart.js": "^2.8.0",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.8.0",
